# browser-agent

./: .env.example  .gitignore  AGENTS.MD  README.md  flight_booking_demo.py  pyproject.toml
.github/ISSUE_TEMPLATE/: 2_bug_report.yml
.github/workflows/: cloud_evals.yml  docker.yml  eval-on-pr.yml  lint.yml  package.yaml  publish.yml  test.yaml
browser_use/: __init__.py  cli.py  config.py  init_cmd.py  observability.py  utils.py
browser_use/actor/: README.md  __init__.py  browser.py  element.py  mouse.py  page.py  target.py
browser_use/agent/: __init__.py  cloud_events.py  prompts.py  service.py  system_prompt.md  system_prompt_flash.md  system_prompt_no_thinking.md  views.py
browser_use/browser/: __init__.py  browser.py  cloud.py  events.py  profile.py  python_highlights.py  session.py  session_manager.py  video_recorder.py  views.py  watchdog_base.py
browser_use/cli_templates/: advanced_template.py  default_template.py  quickstart_template.py  tools_template.py
browser_use/code_use/: __init__.py  formatting.py  namespace.py  notebook_export.py  service.py  system_prompt.md  views.py
browser_use/controller/: __init__.py  service.py
browser_use/dom/: markdown_extractor.py  service.py  utils.py  views.py
browser_use/filesystem/: file_system.py
browser_use/llm/: README.md  __init__.py  messages.py  models.py  schema.py
browser_use/mcp/: server.py
browser_use/models/: __init__.py  booking_data.py
browser_use/sync/: service.py
docs/: docs.json  quickstart.mdx  supported-models.mdx
examples/: code_use_extract_products.py  simple.py
(+159 files in other folders)
