[project]
name = "browser-use"
description = "Automated flight booking agent built on Playwright"
authors = [{ name = "Gregor Zunic" }]
version = "0.9.4"
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "playwright>=1.40.0",
    "pydantic>=2.0.0",
    "langchain-openai>=0.0.5",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
